Fix gap in location pages when below 375px

--- a/src/styles/locationpage/Locationpage.scss
+++ b/src/styles/locationpage/Locationpage.scss
@@ -7,6 +7,7 @@
     gap: 30px;
     @media (max-width: 375.2px) {
         width: 335px;
+        gap: 20px;
     }
     @media (min-width: 376px) and (max-width: 1439px) {
         width: 90%;
@@ -77,7 +78,8 @@
         width: 100%;
         @media (min-width: 375px) and (max-width: 425px) {
             flex-direction: column;
-            min-height: 180px;
+            justify-content: flex-start;
+            gap: 20px;
         }
         @media (min-width: 426px) and (max-width: 768px) {
             flex-direction: column;
@@ -94,7 +96,7 @@
         gap: 10px;
         @media (min-width: 375px) and (max-width: 425px) {
             width: 335px;
-            height: 73px;
+            justify-content: space-between;
         }
         @media (min-width: 426px) and (max-width: 768px) {
             height: 100px;
@@ -206,18 +208,20 @@
             height: 20px;
             background: #FF6060;
             border-radius: 10px;
-
             font-weight: 700;
             font-style: Bold;
             font-size: 14px;
             text-align: center;
             color: white;
-
-            @media (min-width: 375px) and (max-width: 425px) {
-
+            @media (max-width: 375.2px) {
+                height: 14px;
+                font-size: 10px;
+                padding-top: 2.5px;
+                padding-bottom: 2.5px;
+            }
+            @media (min-width: 376px) and (max-width: 425px) {
                 height: 18px;
             }
-
             @media (min-width: 376px) and (max-width: 768px) {
                 height: 12px;
                 font-size: 10px;
